Fixes issues with docker file

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -1,7 +1,9 @@
 FROM ubuntu:bionic
 
 ARG NODE_VERSION=12.14.0
+ENV NODE_VERSION=$NODE_VERSION
 ENV NVM_DIR=/root/.nvm
+ENV PATH=${NVM_DIR}/versions/node/v${NODE_VERSION}/bin/:$PATH
 
 RUN echo '#!/usr/bin/env bash\n\
     /bin/zsh \
