--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -6,7 +6,7 @@ ARG GIT_BRANCH=dev
 RUN echo "#!/usr/bin/env bash\n\
 if [ ! -f "/app/package.json" ]\n\
 then\n\
-  cp -rip /root/app/* /app\ &&\n\
+  cp -rip /root/app/* /app &&\n\
   rm -r /root/app \n\
 fi\n\
 /bin/zsh \
