Changes to documents volume and moves files instead

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -6,18 +6,17 @@ ARG GIT_BRANCH=dev
 RUN echo "#!/usr/bin/env bash\n\
 if [ ! -f "/app/package.json" ]\n\
 then\n\
-  cp -rip /root/app/* /app &&\n\
-  rm -r /root/app \n\
+  mv /root/repo /documents \n\
 fi\n\
 /bin/zsh \
 " > /root/git.entrypoint.sh
 
 RUN bash -c 'chmod +x /root/git.entrypoint.sh &&\
-    git clone ${GIT_URL} /root/app &&\
-    cd /root/app &&\
+    git clone ${GIT_URL} /root/repo &&\
+    cd /root/repo &&\
     git checkout ${GIT_BRANCH} &&\
     npm ci'
 
-WORKDIR /app
-VOLUME ["/app"]
+WORKDIR /documents
+VOLUME ["/documents"]
 ENTRYPOINT ["/root/git.entrypoint.sh"]
