Reverts mount and fixes file check

--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -4,9 +4,9 @@ ARG GIT_URL
 ARG GIT_BRANCH=dev
 
 RUN echo "#!/usr/bin/env bash\n\
-if [ ! -f "/app/package.json" ]\n\
+if [ ! -f "/documents/repo/package.json" ]\n\
 then\n\
-  mv /root/repo /documents \n\
+  mv /root/repo/* /repo \n\
 fi\n\
 /bin/zsh \
 " > /root/git.entrypoint.sh
@@ -17,6 +17,6 @@ RUN bash -c 'chmod +x /root/git.entrypoint.sh &&\
     git checkout ${GIT_BRANCH} &&\
     npm ci'
 
-WORKDIR /documents/repo
-VOLUME ["/documents/repo"]
+WORKDIR /repo
+VOLUME ["/repo"]
 ENTRYPOINT ["/root/git.entrypoint.sh"]
