--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -8,15 +8,14 @@ RUN bash -c 'git clone ${GIT_URL} /root/repo &&\
   git checkout ${GIT_BRANCH} &&\
   npm ci'
 
-RUN echo "#!/usr/bin/env bash \n\
-if [ ! -d "/mnt/repo" ] \n\
-then \n\
-  setopt -s glob_dots \n\
-  mv /root/repo/* /mnt/repo \n\
-fi \n\
-zsh \n\
-" > /git.entrypoint.sh &&\
-  chmod +x /git.entrypoint.sh
+RUN echo "#! /usr/bin/env zsh \n\
+  if [ -d "/mnt/host" ] \n\
+  then \n\
+    setopt glob_dots \n\
+    mv /root/repo/* /mnt/host \n\
+  fi \n\
+  /bin/zsh \n\
+" > /git.entrypoint.sh && chmod +x /git.entrypoint.sh
 
 EXPOSE 3000
 EXPOSE 80
