--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:dev": "docker build -t ajrelic/latest:dev -f ./dev/Dockerfile .",
+    "run:dev": "docker run -it --rm --name dev ajrelic/latest:dev zsh"
   },
   "repository": {
     "type": "git",
