--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -5,9 +5,9 @@ ENV NODE_VERSION=$NODE_VERSION
 ENV NVM_DIR=/root/.nvm
 ENV PATH=${NVM_DIR}/versions/node/v${NODE_VERSION}/bin/:$PATH
 
-VOLUME ["/mnt/host", "/build"]
+VOLUME ["/mnt/host"]
 
 COPY . .
-RUN bash provision.bash; rm provision.bash
+RUN bash provision.bash;
 
 WORKDIR /mnt/host
